# pyccolo

./: .coveragerc  .git-blame-ignore-revs  .gitattributes  .gitignore  .readthedocs.yml  CLAUDE.md  HISTORY.rst  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  deploy-jupyterlite.yml
docs/: HISTORY.rst  LICENSE.txt  api_reference.rst  changelog.rst  cli.rst  composing_tracers.rst  conf.py  events_and_handlers.rst  examples.rst  imported_modules.rst  index.rst  installation.rst  performance.rst  predicates.rst  quickstart.rst  requirements-docs.txt  source_to_source.rst  syntax_augmentation.rst  sys_settrace.rst
docs/_ext/: pyccolo_events.py
docs/_static/: theme-default.js
docs/concepts/: composition.rst  exec_and_scoping.rst  model.rst  rewrite_pipeline.rst
docs/getting_started/: first_tracer.rst  installation.rst
docs/guides/: add_syntax.rst  compose_tracers.rst  guards_and_performance.rst  ipython.rst  observe_and_override.rst  source_to_source.rst  tracing_real_programs.rst
docs/howto/: add_syntax.rst  compose_tracers.rst  conditional_handlers.rst  instrument_imports.rst  ipython.rst  override_values.rst  performance_guards.rst  source_to_source.rst  sys_settrace.rst
docs/reference/: augmentation.rst  cli.rst  config.rst  events.rst  handlers.rst  predicates.rst  registration.rst  source_api.rst  tracer.rst  utilities.rst
docs/tutorials/: concolic.rst  coverage_tracer.rst  lazy_imports.rst  optional_chaining.rst  pipeline_operator.rst  quick_lambda.rst  watchpoint_debugger.rst
examples/: pyccolo_coverage.py
jupyterlite/: .gitignore  README.md  build.sh
jupyterlite/content/: demo.ipynb
pyccolo/: __init__.py  __main__.py  _version.py  ast_bookkeeping.py  ast_rewriter.py  emit_event.py  expr_rewriter.py  extra_builtins.py  handler.py  import_hooks.py  ipython_extension.py  predicate.py  stmt_inserter.py  stmt_mapper.py  syntax_augmentation.py  trace_events.py  trace_stack.py  tracer.py  utils.py  version.py
pyccolo/_fast/: __init__.py  fast_ast.py  misc_ast_utils.py
pyccolo/examples/: __init__.py  autodiff.py  block_lambda.py  brace_subscript.py  concolic.py  coverage.py  func_block.py  future_tracer.py  lazy_imports.py  null_coalesce.py  optional_chaining.py  pipeline_tracer.py  quasiquote.py  quick_lambda.py
pyccolo/fast/: __init__.py  __init__.pyi
pyccolo/tracing/: ast_rewriter.py  expr_rewriter.py  stmt_inserter.py  stmt_mapper.py  syntax_augmentation.py  trace_events.py  trace_stack.py  tracer.py
pyccolo/utils/: __init__.py  ast_utils.py
scripts/: blacken.sh  bump-version.py  deploy.sh
test/: foo.py  lazy_import_test_module.py  raises_and_yields.py  test_assign_handler.py  test_autodiff.py  test_basic_handlers.py  test_block_lambda.py  test_brace_subscript.py  test_concolic.py  test_func_block.py  test_future_tracer.py  test_handlers.py  test_import_hooks.py  test_instrumented_functions.py  test_ipython_extension.py  test_lazy_imports.py  test_local_guards.py  test_no_prints.py  test_optional_chaining.py  test_pipeline_tracer.py  test_predicate.py  test_sandbox.py  test_script_entrypoint.py  test_stack.py  test_syntax_augmentation.py  test_sys_tracer_returns.py  test_trace_events.py  uses_optional_chaining.py
