# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'python versioneer.py setup' after changing this section, and
# commit the resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = pyccolo/_version.py
versionfile_build = pyccolo/_version.py
tag_prefix =
parentdir_prefix = pyccolo-

[metadata]
name = pyccolo
history = file: docs/HISTORY.rst
description = Declarative instrumentation for Python
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/smacke/pyccolo
author = Stephen Macke
author_email = stephen.macke@gmail.com
license = BSD-3-Clause
license_file = docs/LICENSE.txt
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
zip_safe = False
packages = find:
platforms = any
python_requires = >= 3.6
install_requires =
    traitlets
    typing_extensions

[bdist_wheel]
universal = 1

[options.entry_points]
console_scripts =
    pyc = pyccolo.__main__:main
    pyccolo = pyccolo.__main__:main

[options.extras_require]
test =
    black
    hypothesis
    isort
    mypy
    pytest
    pytest-cov
    ruff==0.1.9
dev =
    build
    pycln
    twine
    versioneer
    %(test)s

[tool:pytest]
filterwarnings = ignore::DeprecationWarning

[mypy]
no_strict_optional = True
ignore_missing_imports = True

[mypy-pyccolo._version]
ignore_errors = True

