# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'python versioneer.py setup' after changing this section, and
# commit the resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = pyccolo/_version.py
versionfile_build = pyccolo/_version.py
tag_prefix =
parentdir_prefix = pyccolo-

[metadata]
name = pyccolo
history = file: docs/HISTORY.rst
description = Declarative instrumentation for Python
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/smacke/pyccolo
author = Stephen Macke
author_email = stephen.macke@gmail.com
license = BSD-3-Clause
license_files = docs/LICENSE.txt
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14

[options]
zip_safe = False
packages = find:
platforms = any
python_requires = >= 3.6
install_requires =
    traitlets
    typing_extensions

[bdist_wheel]
universal = 1

[options.entry_points]
console_scripts =
    pyc = pyccolo.__main__:main
    pyccolo = pyccolo.__main__:main

[options.extras_require]
docs =
    sphinx
    sphinx-argparse
    sphinx-copybutton
    sphinx-rtd-theme
ipython =
    ipython
test =
    black==25.1.0; python_version >= "3.9"
    hypothesis
    ipython
    isort
    mypy
    pytest
    pytest-cov
    ruff==0.1.9
dev =
    build
    pycln
    twine
    versioneer
    %(test)s

[tool:pytest]
filterwarnings = ignore::DeprecationWarning

[mypy]
ignore_missing_imports = True

[mypy-pyccolo._version]
ignore_errors = True

# Use a path-based (.pth) editable install instead of setuptools' default
# import-hook editable mode, which mypy cannot follow statically -- it would
# treat this package as untyped and hide type errors that only surface in CI.
# (pyproject's [tool.distutils.editable_wheel] is ignored for setup.cfg-based
# projects, so the option lives here.) Honored by any frontend: pip, uv, etc.
[editable_wheel]
mode = compat
